InternetOfThings/projects/.metadata/.plugins/org.eclipse.cdt.ui/Lab1.build.log
15:18:10 **** Build of configuration Debug for project Lab1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/DH11.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/DH11.d" -MT"Core/Src/DH11.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/DH11.o"
arm-none-eabi-gcc "../Core/Src/LCD1602.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/LCD1602.d" -MT"Core/Src/LCD1602.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/LCD1602.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_hal_msp.d" -MT"Core/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_msp.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/main.c:57:13: warning: 'MX_I2C1_Init' declared 'static' but never defined [-Wunused-function]
   57 | static void MX_I2C1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:58:13: warning: 'MX_I2S3_Init' declared 'static' but never defined [-Wunused-function]
   58 | static void MX_I2S3_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:59:13: warning: 'MX_SPI1_Init' declared 'static' but never defined [-Wunused-function]
   59 | static void MX_SPI1_Init(void);
      |             ^~~~~~~~~~~~
In file included from ../Core/Src/DH11.c:1:
../Core/Src/DH11.h:10:34: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
   10 | void microDelay (uint16_t delay, TIM_HandleTypeDef htim1);
      |                                  ^~~~~~~~~~~~~~~~~
      |                                  HCD_HandleTypeDef
../Core/Src/DH11.h:11:22: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
   11 | uint8_t DHT11_Start (TIM_HandleTypeDef htim1);
      |                      ^~~~~~~~~~~~~~~~~
      |                      HCD_HandleTypeDef
../Core/Src/DH11.h:12:21: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
   12 | uint8_t DHT11_Read (TIM_HandleTypeDef htim1);
      |                     ^~~~~~~~~~~~~~~~~
      |                     HCD_HandleTypeDef
../Core/Src/DH11.h:13:20: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
   13 | char DHT11_GetData(TIM_HandleTypeDef htim1, float* data);
      |                    ^~~~~~~~~~~~~~~~~
      |                    HCD_HandleTypeDef
../Core/Src/DH11.c:3:34: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
    3 | void microDelay (uint16_t delay, TIM_HandleTypeDef htim1)
      |                                  ^~~~~~~~~~~~~~~~~
      |                                  HCD_HandleTypeDef
../Core/Src/LCD1602.c: In function 'lcdString':
../Core/Src/LCD1602.c:85:19: warning: array subscript has type 'char' [-Wchar-subscripts]
   85 |  for(char i=0; str[i]!='\0';i++){
      |                   ^
../Core/Src/LCD1602.c:86:13: warning: array subscript has type 'char' [-Wchar-subscripts]
   86 |  lcdChar(str[i]);
      |             ^
../Core/Src/LCD1602.c: In function 'isIndexInBoundsOfString':
../Core/Src/LCD1602.c:98:1: warning: control reaches end of non-void function [-Wreturn-type]
   98 | }
      | ^
../Core/Src/DH11.c:9:22: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
    9 | uint8_t DHT11_Start (TIM_HandleTypeDef htim1)
      |                      ^~~~~~~~~~~~~~~~~
      |                      HCD_HandleTypeDef
../Core/Src/DH11.c:43:21: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
   43 | uint8_t DHT11_Read (TIM_HandleTypeDef htim1)
      |                     ^~~~~~~~~~~~~~~~~
      |                     HCD_HandleTypeDef
../Core/Src/DH11.c:69:20: error: unknown type name 'TIM_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
   69 | char DHT11_GetData(TIM_HandleTypeDef htim1, float* data) {
      |                    ^~~~~~~~~~~~~~~~~
      |                    HCD_HandleTypeDef
make: *** [Core/Src/subdir.mk:40: Core/Src/DH11.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:18:12 Build Failed. 10 errors, 6 warnings. (took 2s.594ms)

